# hku-idba

./: Help.md  InstallationGuideAndUserGuide.md  ProjectHome.md  Releases.md
idba/: Makefile.am  Makefile.in  README
idba/lib/: Makefile.in
idba/src/assembly/: GappedScaffoldAssembler.cpp  ScaffoldAssembler.cpp
idba/src/assembly/include/: AbstractAssembler.h  AssemblyAlgorithm.h  IterativeAlgorithm.h  Option.h  ScaffoldAssembler.h  SimpleAlgorithm.h  SimpleAssembler.h
idba/src/common/: BitOperation.cpp  BranchGroup.cpp  HashAlign.cpp  HashGraph.cpp  HashNode.cpp  Kmer.cpp  KmerNode.cpp  Log.cpp  MapGraph.cpp  Read.cpp  globals.cpp
idba/src/common/include/: BranchGroup.h  Contig.h  ContigNode.h  HashGraph.h  HashTable.h  Kmer.h  KmerNode.h  KmerVector.h  Reader.h  Sequence.h  Writer.h  globals.h
idba/src/tools/: fa2fq.cpp  fq2fa.cpp  genTaxonDatabase.cpp  idba.cpp  metaCluster.cpp  printClusterHi.cpp  rawN50.cpp  simReads.cpp
trunk/idba/: Makefile  ReadMe.txt  config.h.in  configure  configure.ac
trunk/idba/ext-tool/: edena
trunk/idba/lib/: Makefile.am
trunk/idba/script/: runIdba  validate
trunk/idba/src/assembly/: AbstractAssembler.cpp  AssemblyAlgorithm.cpp  IterativeAlgorithm.cpp  IterativeAssembler.cpp  SimpleAlgorithm.cpp  SimpleAssembler.cpp
trunk/idba/src/assembly/include/: GappedScaffoldAssembler.h  IterativeAssembler.h
trunk/idba/src/common/: AbstractNode.cpp  Contig.cpp  ContigBranchGroup.cpp  ContigGraph.cpp  HashTable.cpp  KmerVector.cpp  Reader.cpp  ScaffoldGraph.cpp  Sequence.cpp  Utils.cpp  Writer.cpp
trunk/idba/src/common/include/: AbstractNode.h  BitOperation.h  ContigBranchGroup.h  ContigGraph.h  HashAlign.h  HashNode.h  Log.h  MapGraph.h  Read.h  ScaffoldGraph.h  Utils.h
trunk/idba/src/libs/: Makefile  compactSequence.cpp  compactSequence.h  contigGraph.cpp  contigGraph.h  globals.h  hashGraph.cpp  hashGraph.h  hashNode.cpp  hashNode.h  hashTable.cpp  hashTable.h  kmer.cpp  kmer.h  log.cpp  read.cpp  read.h  sequence.cpp  sequence.h  utils.cpp  utils.h
trunk/idba/src/tools/: Makefile  alignReads.cpp  buildKmerTable.cpp  calcCover.cpp  calcCoverBlat.cpp  calcCoverMummer.cpp  compare.cpp  compareKmer.cpp  fq2fa.cpp  groupDistance.cpp  idba.cpp  mergeContigs.cpp  mergeReads.cpp  metaClusterHi.cpp  normReads.cpp  rawN50.cpp  simReads.cpp  test.cpp  umea.cpp
wiki/: Help.wiki  InstallationGuideAndUserGuide.wiki  Releases.wiki
